results/SpecGenBench/2-shot/log-UniqueChar-2023_11_06_15_08_30.txt
import java.util.HashMap;
import java.util.Map;

class UniqueChar {
    //@ requires s != null;
    //@ ensures \result == -1 <==> (\forall int i; 0 <= i && i < s.length(); frequency.get(s.charAt(i)) != 1);
    //@ ensures 0 <= \result && \result < s.length() ==> frequency.get(s.charAt(\result)) == 1;
    public int firstUniqChar(String s) {
        Map<Character, Integer> frequency = new HashMap<Character, Integer>();
        //@ maintaining (\forall int i; 0 <= i && i < i; frequency.get(s.charAt(i)) == 1);
        //@ decreases s.length() - i;
        for (int i = 0; i < s.length(); ++i) {
            char ch = s.charAt(i);
            frequency.put(ch, frequency.getOrDefault(ch, 0) + 1);
        }
        //@ maintaining (\forall int i; 0 <= i && i < i; frequency.get(s.charAt(i)) == 1);
        //@ decreases s.length() - i;
        for (int i = 0; i < s.length(); ++i) {
            if (frequency.get(s.charAt(i)) == 1) {
                return i;
            }
        }
        return -1;
    }
}
/home/max/Documents/JMLGPT/tmp/UniqueChar.java:6: error: cannot find symbol
    //@ ensures \result == -1 <==> (\forall int i; 0 <= i && i < s.length(); frequency.get(s.charAt(i)) != 1);
                                                                             ^
  symbol:   variable frequency
  location: class UniqueChar
/home/max/Documents/JMLGPT/tmp/UniqueChar.java:7: error: cannot find symbol
    //@ ensures 0 <= \result && \result < s.length() ==> frequency.get(s.charAt(\result)) == 1;
                                                         ^
  symbol:   variable frequency
  location: class UniqueChar
/home/max/Documents/JMLGPT/tmp/UniqueChar.java:10: error: variable i is already defined in method firstUniqChar(String)
        //@ maintaining (\forall int i; 0 <= i && i < i; frequency.get(s.charAt(i)) == 1);
                                     ^
/home/max/Documents/JMLGPT/tmp/UniqueChar.java:16: error: variable i is already defined in method firstUniqChar(String)
        //@ maintaining (\forall int i; 0 <= i && i < i; frequency.get(s.charAt(i)) == 1);
                                     ^
4 errors

